# neat

./: .gitignore  .travis.yml  CHANGELOG.md  Main.hs  Main2.hs  README.md  neat.cabal
Example/HTML/: Emitter.hs  Emitter.hs.neat  Generator.hs  Page.hs  Page.hs.neat  Page.hs.neat.xml  Page.hs.xsl  Post.hs  Template.hs  Template.hs.neat
Example/Java/: AST.hs  Emitter.hs  Emitter.hs.neat  Emitter.hs.neat.xml
Examples/Java/: AST.hs  Emitter.hs  Emitter.hs.neat
Text/: Neat.hs
Text/Neat/: File.hs  Input.hs  Input.hs.neat  Output.hs  Template.hs
Text/Neat/Input/: Django.hs
Text/Neat/Output/: Haskell.hs  Haskell.hs.neat  Haskell0.hs  Haskell2.hs  Haskell2.hs.neat  XML.hs  XML.hs.neat  XSLT.hs  XSLT.hs.neat
app/: Main.hs
