Name:                  neat
Version:               0.1.1
Author:                Alvaro J. Genial
Maintainer:            ajg
Homepage:              https://github.com/ajg/neat
Synopsis:              A Fast Retargetable Template Engine
Description:           Static compilation of templates to various languages.
License:               MIT
License-File:          LICENSE.md
Category:              Text
Build-type:            Simple
Cabal-version:         >= 1.8

Executable neat
  Main-is:             Main.hs
  hs-source-dirs:      app
  Build-Depends:       base, filepath, neat, parsec

Library
  Build-depends:       base >= 4 && < 5, filepath, parsec
  Exposed-modules:     Text.Neat.Input,
                       Text.Neat.Input.Django,
                       Text.Neat.Output,
                       Text.Neat.Output.Haskell,
                       Text.Neat.Output.XML,
                       Text.Neat.Output.XSLT,
                       Text.Neat.Template

source-repository head
  type:                git
  location:            https://github.com/ajg/neat/tree/master
